--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.3",
     "reactjs-popup": "^1.5.0"
   },
   "scripts": {
@@ -33,5 +33,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage":"http://rainbowasteroids.github.io/ProgressiveSurveyReact"
+  "homepage": "http://rainbowasteroids.github.io/ProgressiveSurveyReact"
 }
